[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"

num-traits = "0.2.16"

clap = { version = "4.4.11", features=["derive"] }

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"
itertools = "0.11.0"